recursion.lessons.recursion.tree.Tree.scala.error
Tree:21: error: not found: value debug
		debug(steps);
                ^